--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,55 @@
 dataset/dataset
 dataset/classses
 __pycache__
+# Miscellaneous
+*.class
+*.log
+*.pyc
+*.swp
+.DS_Store
+.atom/
+.buildlog/
+.history
+.svn/
+migrate_working_dir/
+
+# IntelliJ related
+*.iml
+*.ipr
+*.iws
+.idea/
+
+# The .vscode folder contains launch configuration and tasks you configure in
+# VS Code which you may wish to be included in version control, so this line
+# is commented out by default.
+#.vscode/
+
+# Flutter/Dart/Pub related
+**/doc/api/
+**/ios/Flutter/.last_build_id
+.dart_tool/
+.flutter-plugins
+.flutter-plugins-dependencies
+.packages
+.pub-cache/
+.pub/
+/build/
+
+# Symbolication related
+app.*.symbols
+
+# Obfuscation related
+app.*.map.json
+
+# Android Studio will place build artifacts here
+/android/app/debug
+/android/app/profile
+/android/app/release
+
+build
+mobile_app/aqi_app/windows
+mobile_app/aqi_app/lib/nehgd.txt
+mobile_app/aqi_app/macos
+mobile_app/aqi_app/linux
+mobile_app/aqi_app/web
+mobile_app/aqi_app/ios
