--- a/mobile_app/aqi_app/pubspec.yaml
+++ b/mobile_app/aqi_app/pubspec.yaml
@@ -36,6 +36,16 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   http: ^0.13.5
+  syncfusion_flutter_gauges: ^20.4.52
+  provider: ^6.0.5
+  # intl:
+  
+  # dio: ^4.0.0
+  # get: ^4.3.8
+  # get_storage: ^2.0.3
+  # geolocator: ^7.7.0
+  flutter_spinkit: ^5.1.0
+  #flutter_gauge: ^1.0.8
 
 dev_dependencies:
   flutter_test:
@@ -60,10 +70,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-
+  assets:
+    - assets/icons/
+    - assets/weather/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
