--- a/mobile_app/aqi_app/pubspec.yaml
+++ b/mobile_app/aqi_app/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   http: ^0.13.5
   syncfusion_flutter_gauges: ^20.4.52
   provider: ^6.0.5
-  # intl:
+  intl:
   
   # dio: ^4.0.0
   # get: ^4.3.8
@@ -73,6 +73,7 @@ flutter:
   assets:
     - assets/icons/
     - assets/weather/
+    - assets/get-started.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
