--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,9 @@ services:
       - "host.docker.internal:host-gateway"
     expose:
       - "8000"
-      
+    tty: true
+    
+
   app:
     image: 'jc21/nginx-proxy-manager:latest'
     restart: unless-stopped
