updated compose file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,8 +13,11 @@ services:
     tty: true
     networks:
       - network
-    
 
-  
+networks:
+  network:
+    name: network
+    external: true
+      
 
 
