--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,11 @@ services:
     tty: true
     networks:
       - network 
+    depends_on:
+      - migration
+  migration:
+    image: docker.aqi
+    command: python manage.py migrate --noinput
 
 networks:
   network:
